# text-analysis-gui

./: .eslintrc.json  .gitignore  next.config.js  package.json  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/domain/: aggregate_input.rs  input_csv.rs  mod.rs  noun.rs  token.rs
src-tauri/src/driver/: deepl_client.rs  mod.rs  text_analysis_db.rs
src-tauri/src/gateway/: mod.rs  noun.rs  translate.rs
src-tauri/src/rest/: mod.rs  noun.rs
src-tauri/src/usecase/: csv.rs  mod.rs  noun.rs  text_toknizer.rs  token.rs  translate.rs
src/components/: BodyWrapper.tsx  ContentWrapper.tsx  CountsByNounTable.tsx  Layout.tsx  PathInput.tsx  TopNavbar.tsx
src/components/atoms/: Button.tsx  Icon.tsx  OpenButton.tsx  TextInput.tsx
src/pages/: _app.tsx  index.tsx
src/pages/analysis/: nouns.tsx
src/pages/analysis/nouns/: countsByYear.tsx  index.tsx
src/pages/create/nouns/: index.tsx
src/types/: noun.ts
