[package]
name = "text-analysis-gui"
version = "0.0.0"
description = "Text Analysis Tauri App"
authors = ["haruki.kaneko"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
lindera = "0.14.0"
mry = "0.2.5"
itertools = "0.10.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
